--- a/hackernews/src/App.css
+++ b/hackernews/src/App.css
@@ -41,6 +41,8 @@
 
 #form-input {
   width: 40%;
+  font-size: 16px;
+  margin-top: 20px;
 }
 
 button {
@@ -48,7 +50,7 @@ button {
   height: 30px;
   border-radius: 5px;
   box-shadow: -1px -1px;
-  font-size: 14px;
+  font-size: 16px;
 }
 
 /* #results-container {
