--- a/hackernews/src/App.css
+++ b/hackernews/src/App.css
@@ -71,13 +71,34 @@ hr {
   border-radius: 4px;
 }
 
-button {
-  width: 75px;
-  height: 30px;
+/* Search Terms */
+
+.recent-search-li {
+  display: inline-block;
+  text-decoration: none;
+  font-size: 26px;
+  margin-right: 15px;
+}
+
+.search-term-button {
+  width: 100%;
+  font-size: 22px;
+  height: 40px;
+  border-radius: 5px;
+  box-shadow: -1px -1px;
+}
+
+.react-icons {
+  vertical-align: middle;
+}
+
+.search-button {
+  width: 100px;
+  height: 40px;
   border: 2px solid #3286b7;
   border-radius: 5px;
   box-shadow: -1px -1px;
-  font-size: 16px;
+  font-size: 26px;
   font-weight: 550;
   color: white;
   background-color: #ff8736;
