--- a/hackernews/src/App.css
+++ b/hackernews/src/App.css
@@ -73,6 +73,14 @@ hr {
 
 /* Search Terms */
 
+.recent-search-title {
+  display: inline-block;
+  text-decoration: none;
+  font-size: 20px;
+  margin-right: 15px;
+  margin-left: -100px;
+}
+
 .recent-search-li {
   display: inline-block;
   text-decoration: none;
@@ -84,8 +92,10 @@ hr {
   width: 100%;
   font-size: 22px;
   height: 40px;
-  border-radius: 5px;
-  box-shadow: -1px -1px;
+  padding-left: 12px;
+  border: 3px solid #3286b7;
+  border-radius: 10px;
+  box-shadow: 1px 1px;
 }
 
 .react-icons {
