--- a/hackernews/src/App.css
+++ b/hackernews/src/App.css
@@ -135,3 +135,11 @@ a {
   text-decoration: none;
   color: #198a19;
 }
+
+@media screen and (min-width: 1500px) {
+  #form-results-container {
+    width: 65%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
