--- a/hackernews/src/App.css
+++ b/hackernews/src/App.css
@@ -6,6 +6,8 @@
   margin-top: 5vmin;
   height: 12vmin;
   pointer-events: none;
+  border-radius: 20px;
+  box-shadow: 3px 3px 7px #000000c4;
 }
 
 /* @media (prefers-reduced-motion: no-preference) {
@@ -67,8 +69,8 @@ hr {
   font-size: 22px;
   padding: 2px;
   margin-top: 20px;
-  border: 2px solid #3286b7;
-  border-radius: 4px;
+  border: 2px solid black;
+  border-radius: 3px;
 }
 
 /* Search Terms */
@@ -105,9 +107,9 @@ hr {
   font-size: 22px;
   height: 40px;
   padding-left: 12px;
-  border: 3px solid #3286b7;
-  border-radius: 10px;
-  box-shadow: 1px 1px;
+  border: 3px solid black;
+  border-radius: 3px;
+  box-shadow: 1px 1px 2px;
 }
 
 .search-term-button:focus {
@@ -122,18 +124,61 @@ hr {
 .search-button {
   width: 100px;
   height: 40px;
-  border: 2px solid #3286b7;
-  border-radius: 5px;
-  box-shadow: -1px -1px;
-  font-size: 26px;
-  font-weight: 550;
-  color: white;
-  background-color: #ff8736;
+  border: 2px solid rgba(0, 0, 0, 0.673);
+  border-radius: 3px;
+  box-shadow: 2px 2px 3px;
+  font-size: 22px;
+  padding: 3px;
+  color: black;
+  background-color: #3286b7;
+}
+
+.search-button:hover {background-color: #96d0f3}
+
+.search-button:active {
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+
+.search-term-button:hover, .get-comments:hover {background-color: #96d0f3}
+
+.search-term-button:active,
+.get-comments:active {
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+
+#recent-search-term-div {
+  margin-top: 4rem;
 }
 
 a {
   text-decoration: none;
   color: #198a19;
+}
+
+/* Comments */
+.comment-markdown p {
+  line-height: 1.5;
+}
+
+#comment-container {
+  width: 50%;
+}
+#comment-header {
+  border-bottom: 3px solid black;
+  width: fit-content;
+}
+
+.get-comments {
+  height: 25px;
+  border: 2px solid rgba(0, 0, 0, 0.673);
+  border-radius: 3px;
+  box-shadow: 2px 2px 3px;
+  font-size: 16px;
+  padding: 3px;
+  color: black;
+  background-color: #3286b7;
 }
 
 @media screen and (min-width: 1500px) {
